Bump to 1.21.4 to support registry words, and fixed compatibility with Adventure components